// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat reducers AGENTS_AVAILABLE updates state with the new value 1`] = `
Object {
  "agentEndedConversation": false,
  "agentTyping": false,
  "agentsAvailable": undefined,
  "chatContainerHidden": true,
  "chatLauncherHidden": true,
  "configuration": Object {
    "chatEmailTranscript": false,
    "chatFileAttachments": false,
    "enableEmojis": false,
    "flashNotificationOnNewMessage": false,
    "playSoundOnNewMessage": false,
  },
  "initializedState": "uninitialized",
  "messageFieldFocused": false,
  "muteSounds": false,
  "platformEvents": Array [],
  "transcript": Object {},
  "welcomeFormRegistered": false,
}
`;

exports[`chat reducers AGENTS_AVAILABLE updates state with the new value 2`] = `
Object {
  "agentEndedConversation": false,
  "agentTyping": false,
  "agentsAvailable": undefined,
  "chatContainerHidden": true,
  "chatLauncherHidden": true,
  "configuration": Object {
    "chatEmailTranscript": false,
    "chatFileAttachments": false,
    "enableEmojis": false,
    "flashNotificationOnNewMessage": false,
    "playSoundOnNewMessage": false,
  },
  "initializedState": "uninitialized",
  "messageFieldFocused": false,
  "muteSounds": false,
  "platformEvents": Array [],
  "transcript": Object {},
  "welcomeFormRegistered": false,
}
`;

exports[`chat reducers NEW_WEBCHAT_SESSION updates state with initial state merged with current visibility state and "initialized" set to "LOADING" 1`] = `
Object {
  "agentEndedConversation": false,
  "agentTyping": false,
  "agentsAvailable": true,
  "chatContainerHidden": false,
  "chatLauncherHidden": false,
  "configuration": Object {
    "chatEmailTranscript": false,
    "chatFileAttachments": false,
    "enableEmojis": false,
    "flashNotificationOnNewMessage": false,
    "playSoundOnNewMessage": false,
  },
  "initializedState": "loading",
  "messageFieldFocused": false,
  "muteSounds": false,
  "platformEvents": Array [],
  "transcript": Object {},
  "welcomeFormRegistered": false,
}
`;
